--- a/build_ctxEventTracer.gradle
+++ b/build_ctxEventTracer.gradle
@@ -60,6 +60,10 @@ dependencies {
 	  //compile fileTree(dir: '../it.unibo.iss.libs/libs/bth', include: 'bluecove-gpl-2.1.1-SNAPSHOT.jar')
 	  // https://mvnrepository.com/artifact/org.json/json
 	  compile group: 'org.json', name: 'json', version: '20160810'
+compile group: 'com.pi4j', name: 'pi4j-core', version: '1.1'
+compile fileTree(dir: '../it.unibo.iss.libs/libs/pi4j',  include: 'pi4j-core-1.1.jar')
+compile fileTree(dir: '../it.unibo.iss.libs/libs/unibo', include: 'labbaseRobotSam.jar')
+compile fileTree(dir: '../it.unibo.iss.libs/libs/unibo', include: 'uniboQactorRobot.jar') 
   	 //compile fileTree(dir: '../it.unibo.iss.libs/libs/unibo', include: 'blsHL.jar')
      //compile fileTree(dir: '../it.unibo.iss.libs/libs/unibo', include: 'blsGUI.jar')
 	 //compile fileTree(dir: '../it.unibo.iss.libs/libs/unibo', include: 'bls17Blink.jar')
